Init sphinx docs

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-UimaScala Doc
+<html>
+<head>
+    <title>UimaScala</title>
+</head>
+<body>
+    <a href="build/html/index.html">UimaScala Doc</a>
+</body>
+</html>
